Private_location/deploy-contour-ingress.yaml
---
# Source: blazemeter-crane/templates/crane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: role-crane2
  name: crane
  namespace: bm2
spec:
  replicas: 1
  selector:
    matchLabels:
      role: role-crane2
      crane: ready
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: role-crane2
        crane: ready
    spec:
      serviceAccountName: default

      automountServiceAccountToken: true
      containers:
      - env:
        - name: AUTH_TOKEN
          value: 628dbec71988169a16ba9aad12887cd2d9a6caeda31e34d09179bed3bd16e9ea
        - name: HARBOR_ID
          value: 650e7217a737f4164d0e20a6
        - name: SHIP_ID
          value: 651166b6e14bba8e570da596
        - name: CONTAINER_MANAGER_TYPE
          value: KUBERNETES
        - name: IMAGE_OVERRIDES
          value: '{}'
        - name: DOCKER_REGISTRY
          value: gcr.io/verdant-bulwark-278
        - name: AUTO_KUBERNETES_UPDATE
          value: 'true'
        image: gcr.io/verdant-bulwark-278/blazemeter/crane:latest-master
        imagePullPolicy: Always
        name: crane-container
        
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
