Private_location/deploy_k8s-opl.yaml
# This is the main deployment manifest for crane deployment (Make changes to the HarbourId, ShipId & Auth-token)
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: rolecrane1
    app_cmdb_id: A0819633
  name: crane
  namespace: bm1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: rolecrane1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: rolecrane1
        app_cmdb_id: A0819633
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
      - env:
        - name: AUTH_TOKEN
          value: ab8bc68b3396ee5669eb9d474834a0646b6e75c4e13a8a126c0d02b15c30694b # Update auth token
        - name: HARBOR_ID
          value: 63cd1cc281374f2d9743cc73 # Update Harbour ID
        - name: SHIP_ID
          value: 656802147d074adaa60a6098 # Update ship ID
        - name: CONTAINER_MANAGER_TYPE
          value: KUBERNETES
        - name: IMAGE_OVERRIDES
          value: '{}'
        - name: DOCKER_REGISTRY
          value: gcr.io/verdant-bulwark-278
        - name: AUTO_KUBERNETES_UPDATE
          value: 'true'
       # - name: KUBERNETES_RESOURCES_DEFAULT_CPU
       #   value: "500"
       # - name: KUBERNETES_RESOURCES_DEFAULT_MEM
       #   value: "4048"
        image: gcr.io/verdant-bulwark-278/blazemeter/crane:latest-master
        #resources:
        #  requests:
        #    memory: "64Mi"
        #    cpu: "250m"
        #  limits:
        #    memory: "1000Mi"
        #    cpu: "500m"
        imagePullPolicy: Always
        name: crane-container
        
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
