Private_location/deploy_opl-istio.yaml
# This is the main deployment manifest for crane deployment (Make changes to the HarbourId, ShipId & Auth-token)
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: role-crane11
  name: crane1
  namespace: bm1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: role-crane11
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: role-crane11
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
      - env:
        - name: AUTH_TOKEN
          value: e306dfdddccc619f42d44adec643987927945f11de0e25e814ba771825e39e32 # Update auth token
        - name: HARBOR_ID
          value: 650e7217a737f4164d0e20a6 # Update Harbour ID
        - name: SHIP_ID
          value: 65115d273265911ef80393d6 # Update ship ID
        - name: CONTAINER_MANAGER_TYPE
          value: KUBERNETES
        - name: IMAGE_OVERRIDES
          value: '{}'
        - name: DOCKER_REGISTRY
          value: gcr.io/verdant-bulwark-278
        - name: AUTO_KUBERNETES_UPDATE
          value: 'true'
        - name: KUBERNETES_WEB_EXPOSE_TYPE
          value: ISTIO
        - name: KUBERNETES_WEB_EXPOSE_SUB_DOMAIN
          value: mydomain.local
        - name: KUBERNETES_WEB_EXPOSE_TLS_SECRET_NAME
          value: wildcard-credential
        - name: KUBERNETES_SERVICE_USE_TYPE
          value: CLUSTERIP
        - name: KUBERNETES_USE_PRE_PULLING
          value: "true"
      #  - name: KUBERNETES_ISTIO_GATEWAY_NAME
      #    value: bzm-gateway
       ## Note: The environment variable KUBERNETES_ISTIO_GATEWAY_NAME is optional. If it is not set, the crane agent creates a gateway resource for every mock deployment.

        image: gcr.io/verdant-bulwark-278/blazemeter/crane:latest-master
        imagePullPolicy: Always
        
        name: crane-container
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
